--- a/notebooks/usage_example.ipynb
+++ b/notebooks/usage_example.ipynb
@@ -2,36 +2,77 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "initial_id",
-   "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2024-12-16T18:44:09.504753500Z",
-     "start_time": "2024-12-16T18:43:45.533294100Z"
-    }
-   },
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-12-16 12:44:09,498 - INFO - Visualization and true color composition completed successfully.\n",
-      "2024-12-16 12:44:09,499 - INFO - Process finished successfully.\n"
+      "2025-01-14 10:59:21,514 - INFO - Output directory already exists: Z:\\guser\\tml\\mypapers\\HLS_package_paper\\HLS_DATASET\\sentinel\\50KLB\n",
+      "2025-01-14 11:01:43,562 - INFO - Atmospheric correction completed for tile 50KLB. Results: [None]\n",
+      "2025-01-14 11:01:43,694 - INFO - Atmospheric correction completed successfully.\n",
+      "2025-01-14 11:02:29,234 - INFO - Resampling completed successfully.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing results for tile 50KLB: [None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-01-14 11:02:46,830 - INFO - HLS water image generation completed successfully.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[None, None, None, None]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-01-14 11:02:54,777 - INFO - Visualization and true color composition completed successfully.\n",
+      "2025-01-14 11:02:54,777 - INFO - Process finished successfully.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[None, None, None, None]\n"
      ]
     }
    ],
    "source": [
+    "import os\n",
     "from src.run_satwater import run_satwater\n",
     "\n",
-    "select_sat = 'landsat'\n",
-    "tile = '13QGC'\n",
-    "period_ini = '20230204'\n",
-    "period_end = '20230208'\n",
-    "output_dir = r'Z:\\guser\\tml\\mypapers\\HLS_package_paper\\glint_correction\\hls_output\\landsat_val'\n",
+    "tiles = ['50KLB']\n",
+    "select_sat = 'sentinel'\n",
+    "period_ini = '20231209'\n",
+    "period_end = '20231211'\n",
     "\n",
-    "run_satwater(select_sat, tile, period_ini, period_end, output_dir)"
-   ]
+    "for tile in tiles:\n",
+    "    output_dir = rf'Z:\\guser\\tml\\mypapers\\HLS_package_paper\\HLS_DATASET\\sentinel\\{tile}'\n",
+    "    if not os.path.exists(output_dir): os.makedirs\n",
+    "    run_satwater(select_sat, tile, period_ini, period_end, output_dir)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-01-14T17:02:54.784699700Z",
+     "start_time": "2025-01-14T16:59:21.508740100Z"
+    }
+   },
+   "id": "646607545a55bae0"
   },
   {
    "cell_type": "code",
@@ -41,7 +82,7 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "10c8a09d82de8356"
+   "id": "5b1954d9ca320eef"
   }
  ],
  "metadata": {
