--- a/src/satwater/glint_correction/glint_corr.ipynb
+++ b/src/satwater/glint_correction/glint_corr.ipynb
@@ -2,7 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "id": "b88cf1b4b8e7693c",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-18T22:33:13.253476500Z",
+     "start_time": "2025-03-18T22:33:13.249057900Z"
+    },
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import xml.etree.ElementTree as ET\n",
@@ -27,34 +39,33 @@
     "            result[child.tag] = child_dict\n",
     "            \n",
     "    return result"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2025-03-18T22:33:13.253476500Z",
-     "start_time": "2025-03-18T22:33:13.249057900Z"
-    }
-   },
-   "id": "b88cf1b4b8e7693c"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
+   "id": "initial_id",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-18T22:59:37.600702300Z",
+     "start_time": "2025-03-18T22:59:00.625923600Z"
+    },
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "tags": []
+   },
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
+     "ename": "IndexError",
+     "evalue": "boolean index did not match indexed array along axis 0; size of axis is 5490 but size of corresponding boolean axis is 10980",
      "output_type": "error",
      "traceback": [
-      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
-      "\u001B[31mKeyboardInterrupt\u001B[39m                         Traceback (most recent call last)",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[17]\u001B[39m\u001B[32m, line 90\u001B[39m\n\u001B[32m     86\u001B[39m \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[38;5;28mlen\u001B[39m(band_index)):\n\u001B[32m     88\u001B[39m     band_key = band_index[i]\n\u001B[32m---> \u001B[39m\u001B[32m90\u001B[39m     target = \u001B[43mparamglint\u001B[49m\u001B[43m(\u001B[49m\u001B[43mang\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mmetadata_6sv\u001B[49m\u001B[43m[\u001B[49m\u001B[33;43m\"\u001B[39;49m\u001B[33;43mInputData\u001B[39;49m\u001B[33;43m\"\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m[\u001B[49m\u001B[33;43m\"\u001B[39;49m\u001B[33;43mgeometry\u001B[39;49m\u001B[33;43m\"\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m[\u001B[49m\u001B[43mband_key\u001B[49m\u001B[43m]\u001B[49m\u001B[43m[\u001B[49m\u001B[33;43m'\u001B[39;49m\u001B[33;43msolar_zn\u001B[39;49m\u001B[33;43m'\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mmetadata_6sv\u001B[49m\u001B[43m[\u001B[49m\u001B[33;43m\"\u001B[39;49m\u001B[33;43mInputData\u001B[39;49m\u001B[33;43m\"\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m[\u001B[49m\u001B[33;43m\"\u001B[39;49m\u001B[33;43msixSV_params\u001B[39;49m\u001B[33;43m\"\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m[\u001B[49m\u001B[43mband_key\u001B[49m\u001B[43m]\u001B[49m\u001B[43m[\u001B[49m\u001B[33;43m'\u001B[39;49m\u001B[33;43mview_z\u001B[39;49m\u001B[33;43m'\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mmetadata_6sv\u001B[49m\u001B[43m[\u001B[49m\u001B[33;43m\"\u001B[39;49m\u001B[33;43mInputData\u001B[39;49m\u001B[33;43m\"\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m[\u001B[49m\u001B[33;43m\"\u001B[39;49m\u001B[33;43msixSV_params\u001B[39;49m\u001B[33;43m\"\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m[\u001B[49m\u001B[43mband_key\u001B[49m\u001B[43m]\u001B[49m\u001B[43m[\u001B[49m\u001B[33;43m'\u001B[39;49m\u001B[33;43moptical_depth_total\u001B[39;49m\u001B[33;43m'\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mw_refIndex\u001B[49m\u001B[43m[\u001B[49m\u001B[43mi\u001B[49m\u001B[43m]\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m     92\u001B[39m     array_path = os.path.join(image_path, filtered_dict[band_key])\n\u001B[32m     94\u001B[39m     \u001B[38;5;28;01mwith\u001B[39;00m rasterio.open(array_path) \u001B[38;5;28;01mas\u001B[39;00m src:\n",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[17]\u001B[39m\u001B[32m, line 30\u001B[39m, in \u001B[36mparamglint\u001B[39m\u001B[34m(ang, solar_zn, view_zn, optical_depth_total, nw)\u001B[39m\n\u001B[32m     27\u001B[39m \u001B[38;5;66;03m# Direct Transmittance:\u001B[39;00m\n\u001B[32m     28\u001B[39m Tdir = (np.exp(-\u001B[38;5;28mfloat\u001B[39m(optical_depth_total) / np.cos(\u001B[38;5;28mfloat\u001B[39m(solar_zn) * (np.pi / \u001B[32m180\u001B[39m)))) * (np.exp(-\u001B[38;5;28mfloat\u001B[39m(optical_depth_total) / np.cos(\u001B[38;5;28mfloat\u001B[39m(view_zn) * (np.pi / \u001B[32m180\u001B[39m))))\n\u001B[32m---> \u001B[39m\u001B[32m30\u001B[39m \u001B[38;5;28;01mreturn\u001B[39;00m {\u001B[33m'\u001B[39m\u001B[33mrFresnel\u001B[39m\u001B[33m'\u001B[39m: rfresnel, \u001B[33m'\u001B[39m\u001B[33mTdir\u001B[39m\u001B[33m'\u001B[39m: Tdir}\n",
-      "\u001B[36mFile \u001B[39m\u001B[32mC:\\Program Files (x86)\\JetBrains\\PyCharm 2023.2.5\\plugins\\python\\helpers\\pydev\\_pydevd_bundle\\pydevd_frame.py:747\u001B[39m, in \u001B[36mPyDBFrame.trace_dispatch\u001B[39m\u001B[34m(self, frame, event, arg)\u001B[39m\n\u001B[32m    745\u001B[39m \u001B[38;5;66;03m# if thread has a suspend flag, we suspend with a busy wait\u001B[39;00m\n\u001B[32m    746\u001B[39m \u001B[38;5;28;01mif\u001B[39;00m info.pydev_state == STATE_SUSPEND:\n\u001B[32m--> \u001B[39m\u001B[32m747\u001B[39m     \u001B[38;5;28;43mself\u001B[39;49m\u001B[43m.\u001B[49m\u001B[43mdo_wait_suspend\u001B[49m\u001B[43m(\u001B[49m\u001B[43mthread\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mframe\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mevent\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43marg\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m    748\u001B[39m     \u001B[38;5;66;03m# No need to reset frame.f_trace to keep the same trace function.\u001B[39;00m\n\u001B[32m    749\u001B[39m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28mself\u001B[39m.trace_dispatch\n",
-      "\u001B[36mFile \u001B[39m\u001B[32mC:\\Program Files (x86)\\JetBrains\\PyCharm 2023.2.5\\plugins\\python\\helpers\\pydev\\_pydevd_bundle\\pydevd_frame.py:144\u001B[39m, in \u001B[36mPyDBFrame.do_wait_suspend\u001B[39m\u001B[34m(self, *args, **kwargs)\u001B[39m\n\u001B[32m    143\u001B[39m \u001B[38;5;28;01mdef\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34mdo_wait_suspend\u001B[39m(\u001B[38;5;28mself\u001B[39m, *args, **kwargs):\n\u001B[32m--> \u001B[39m\u001B[32m144\u001B[39m     \u001B[38;5;28;43mself\u001B[39;49m\u001B[43m.\u001B[49m\u001B[43m_args\u001B[49m\u001B[43m[\u001B[49m\u001B[32;43m0\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m.\u001B[49m\u001B[43mdo_wait_suspend\u001B[49m\u001B[43m(\u001B[49m\u001B[43m*\u001B[49m\u001B[43margs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43m*\u001B[49m\u001B[43m*\u001B[49m\u001B[43mkwargs\u001B[49m\u001B[43m)\u001B[49m\n",
-      "\u001B[36mFile \u001B[39m\u001B[32mC:\\Program Files (x86)\\JetBrains\\PyCharm 2023.2.5\\plugins\\python\\helpers\\pydev\\pydevd.py:1160\u001B[39m, in \u001B[36mPyDB.do_wait_suspend\u001B[39m\u001B[34m(self, thread, frame, event, arg, send_suspend_message, is_unhandled_exception)\u001B[39m\n\u001B[32m   1157\u001B[39m         from_this_thread.append(frame_id)\n\u001B[32m   1159\u001B[39m \u001B[38;5;28;01mwith\u001B[39;00m \u001B[38;5;28mself\u001B[39m._threads_suspended_single_notification.notify_thread_suspended(thread_id, stop_reason):\n\u001B[32m-> \u001B[39m\u001B[32m1160\u001B[39m     \u001B[38;5;28;43mself\u001B[39;49m\u001B[43m.\u001B[49m\u001B[43m_do_wait_suspend\u001B[49m\u001B[43m(\u001B[49m\u001B[43mthread\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mframe\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mevent\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43marg\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43msuspend_type\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mfrom_this_thread\u001B[49m\u001B[43m)\u001B[49m\n",
-      "\u001B[36mFile \u001B[39m\u001B[32mC:\\Program Files (x86)\\JetBrains\\PyCharm 2023.2.5\\plugins\\python\\helpers\\pydev\\pydevd.py:1175\u001B[39m, in \u001B[36mPyDB._do_wait_suspend\u001B[39m\u001B[34m(self, thread, frame, event, arg, suspend_type, from_this_thread)\u001B[39m\n\u001B[32m   1172\u001B[39m             \u001B[38;5;28mself\u001B[39m._call_mpl_hook()\n\u001B[32m   1174\u001B[39m         \u001B[38;5;28mself\u001B[39m.process_internal_commands()\n\u001B[32m-> \u001B[39m\u001B[32m1175\u001B[39m         \u001B[43mtime\u001B[49m\u001B[43m.\u001B[49m\u001B[43msleep\u001B[49m\u001B[43m(\u001B[49m\u001B[32;43m0.01\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[32m   1177\u001B[39m \u001B[38;5;28mself\u001B[39m.cancel_async_evaluation(get_current_thread_id(thread), \u001B[38;5;28mstr\u001B[39m(\u001B[38;5;28mid\u001B[39m(frame)))\n\u001B[32m   1179\u001B[39m \u001B[38;5;66;03m# process any stepping instructions\u001B[39;00m\n",
-      "\u001B[31mKeyboardInterrupt\u001B[39m: "
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 106\u001b[0m\n\u001b[0;32m    103\u001b[0m m_glint \u001b[38;5;241m=\u001b[39m m_glint[\u001b[38;5;241m0\u001b[39m,:,:]\n\u001b[0;32m    104\u001b[0m r_glint \u001b[38;5;241m=\u001b[39m r_glint[\u001b[38;5;241m0\u001b[39m,:,:]\n\u001b[1;32m--> 106\u001b[0m r_corr[m_glint] \u001b[38;5;241m=\u001b[39m \u001b[43marr\u001b[49m\u001b[43m[\u001b[49m\u001b[43mm_glint\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;241m-\u001b[39m r_glint[m_glint]\n\u001b[0;32m    108\u001b[0m r_corr[(r_corr \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m0.2\u001b[39m) \u001b[38;5;241m&\u001b[39m (r_corr \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m0\u001b[39m)] \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.0001\u001b[39m\n\u001b[0;32m    110\u001b[0m r_corr_final \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mwhere((np\u001b[38;5;241m.\u001b[39misnan(r_corr)) \u001b[38;5;241m|\u001b[39m (r_corr \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m0\u001b[39m), arr, r_corr)\n",
+      "\u001b[1;31mIndexError\u001b[0m: boolean index did not match indexed array along axis 0; size of axis is 5490 but size of corresponding boolean axis is 10980"
      ]
     }
    ],
@@ -91,12 +102,12 @@
     "    return {'rFresnel': rfresnel, 'Tdir': Tdir}\n",
     "\n",
     "   \n",
-    "image_path = r\"Z:\\guser\\tml\\mypapers\\HLS_package_paper\\package_validation\\sentinel\\21HVB\\atmcor\\sentinel\\21HVB\\S2A_MSIL1C_20230209T133831_N0509_R124_T21HVB_20230209T165829\\S2A_MSIL1C_20230209T133831_N0509_R124_T21HVB_20230209T165829.SAFE\\tempdir2\"\n",
+    "image_path = r\"G:\\Meu Drive\\PhD\\ADJCORR\\21HVB\"\n",
     "band_path = [i for i in os.listdir(image_path)]\n",
     "\n",
-    "output_path = r\"Z:\\guser\\tml\\mypapers\\HLS_package_paper\\glint_correction\\21HVB_20230209\"\n",
+    "output_path = r\"G:\\Meu Drive\\PhD\\ADJCORR\\out\"\n",
     "\n",
-    "tree = ET.parse(r'Z:\\guser\\tml\\mypapers\\HLS_package_paper\\package_validation\\sentinel\\21HVB\\atmcor\\sentinel\\21HVB\\S2A_MSIL1C_20230209T133831_N0509_R124_T21HVB_20230209T165829\\S2A_MSIL1C_20230209T133831_N0509_R124_T21HVB_20230209T165829.SAFE\\MTD.xml')\n",
+    "tree = ET.parse(r'G:\\Meu Drive\\PhD\\ADJCORR\\21HVB\\MTD.xml')\n",
     "\n",
     "root = tree.getroot()\n",
     "metadata_6sv = xml_to_dict(root)\n",
@@ -183,46 +194,36 @@
     "        nodata=-9999\n",
     "    )\n",
     "    \n",
-    "    output_path = os.path.join(output_path, f\"glintcorr_{band_names[i]}\")\n",
+    "    output_path_save = os.path.join(output_path, f\"glintcorr_{band_names[i]}\")\n",
     "    \n",
-    "    with rasterio.open(output_path, 'w', **profile) as dest_dataset:\n",
+    "    with rasterio.open(output_path_save, 'w', **profile) as dest_dataset:\n",
     "        dest_dataset.write(arr_integer, 1)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2025-03-18T22:59:37.600702300Z",
-     "start_time": "2025-03-18T22:59:00.625923600Z"
-    }
-   },
-   "id": "initial_id"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "80cc8c92efed05b8"
+   "id": "80cc8c92efed05b8",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
